# Shelfie

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vercel.json  vite.config.ts
api/: admin-unlock.mjs  book-lookup.mjs  book-lookup.ts
api/_lib/: isbnLookup.ts
docs/: DEPLOY.md  DESKTOP.md
e2e/: MANUAL.md  REPORT.md  add-book.spec.ts  auth.setup.ts  book-detail.spec.ts  helpers.ts  library.spec.ts
scripts/: desktop-build.sh  write-latest-json.sh
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/keys/: README.md  shelfie.key.pub
src-tauri/src/: lib.rs  main.rs
src/components/: AddFab.tsx  AppLayout.tsx  BackendUnavailable.tsx  BarcodeScanner.tsx  BatchBarcodeScanner.tsx  BookAnnotations.tsx  BookCard.tsx  BookForm.tsx  BookInspector.tsx  BookListRow.tsx  BookLoans.tsx  CategoryInput.tsx  CollectionInput.tsx  CoverImage.tsx  CoverScanner.tsx  CoverUpload.tsx  CrashLogPanel.tsx  DesktopAutoUpdater.tsx  DesktopUpdateCard.tsx  DuplicateWarning.tsx  EmptyState.tsx  ErrorBoundary.tsx  ImageCropper.tsx  ImportExportPanel.tsx  InstallAppCard.tsx  KeyboardShortcuts.tsx  LanguageBadge.tsx  LanguageSelect.tsx  LibraryDashboard.tsx  LoanReminders.tsx  MoreNav.tsx  OfflineBanner.tsx  Onboarding.tsx  ProfileMenu.tsx  QuickActions.tsx  ReadingProgressFields.tsx  ReadingStatusSelect.tsx  ShelfSelect.tsx  (+8 more)
supabase/: .gitignore  config.toml
(+75 files in other folders)
