[package]
name = "shelfie"
version = "0.1.2"
description = "Shelfie — personal book library"
authors = ["Shelfie"]
edition = "2021"

[lib]
name = "shelfie_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
